# AC215_FormulaOnePenaltyTool

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  input.dvc  main.py  pyproject.toml  pytest.ini
.dvc/: config
.github/workflows/: ci.yml
secrets/: ac215-f1penaltytool.json
src/api/: README.md  main.py
src/datapipeline/: DATAVERSIONING_README.md  Dockerfile  README.md  converter.py  main.py  pyproject.toml  requirements.txt  scraper.py
src/deployment/: Dockerfile  README.md  docker-entrypoint.sh  docker-shell.sh  docker_config.json
src/deployment/deploy_images/: Pulumi.dev.yaml  Pulumi.dev2.yaml  Pulumi.yaml  __main__.py
src/deployment/deploy_k8s/: Pulumi.dev.yaml  Pulumi.ssl.yaml  Pulumi.yaml  __main__.py  create_cluster.py  create_network.py  setup_containers.py  setup_loadbalancer.py  setup_loadbalancer_ssl.py
src/deployment/deploy_single_vm/: Pulumi.dev.yaml  Pulumi.dev2.yaml  Pulumi.yaml  __main__.py  create_instance.py  provision_instance.py  setup_containers.py  setup_webserver.py
src/deployment/nginx-conf/nginx/: nginx.conf
src/finetune/: README.md  build_incidents_dataset.py  incidents.json  labeling_assistant.py  parse_fia_documents.py
src/finetune/data/: convert_for_gemini.py  incidents.json  make_jsonl.py  train.jsonl  train_converted.jsonl  valid.jsonl  valid_converted.jsonl
src/finetune/logs/: Accuracy.csv  Loss.csv  Number_of_predictions.csv
src/frontend/frontend-template/: .env.production  README.md  docker-shell.sh  package-lock.json  package.json  tailwind.config.js
src/frontend/frontend-template/f1fonts/: fonts.css
src/frontend/frontend-template/src/app/: globals.css  layout.jsx  page.jsx
src/frontend/frontend-template/src/lib/: Common.js  DataService.js
src/rag/: Dockerfile  README.md  ac215_rag.py  agent_tools.py  cli.py  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  main.py  pyproject.toml  pytest.ini  rag.py
src/tests/: README.md
src/tests/integration/: test_api.py
src/tests/system/: test_system_api.py
tests/: README.md
tests/integration/: test_api.py
tests/system/: test_system_api.py
tests/unit/: test_unit.py
(+20 files in other folders)
