[project]
name = "app"
version = "0.1.0"
description = "AC215 project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.63.0",
    "dvc-gs>=3.0.2",
    "chromadb>=1.1.0",
    "google-genai>=1.39.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-text-splitters",
    "openai>=1.95.1",
    "openai-agents>=0.3.2",
    "pandas>=2.3.3",
    "pypdf",
    "tqdm",
    "vertexai",
    "beautifulsoup4",
    "pdfplumber",
    "tqdm",
    "urllib3",
    "chardet",
    "typing_extensions",
    "charset-normalizer",
    "soupsieve",
    "pdfminer.six",
    "cryptography",
    "google-cloud-storage",
    "fastapi>=0.115.12",
    "fastmcp>=2.13.0.2",
    "google-genai>=1.47.0",
    "pillow>=12.0.0",
    "uvicorn>=0.34.3",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "httpx>=0.26.0",
    "pre-commit>=3.6.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest>=7.4.4",
    "python-multipart>=0.0.7",
    "requests>=2.31.0",
]
