[project]
name = "datapipeline"
version = "0.1.0"
description = "A data pipeline for processing F1 race control documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pdfplumber",
    "tqdm",
    "urllib3",
    "chardet",
    "typing_extensions",
    "charset-normalizer",
    "soupsieve",
    "pdfminer.six",
    "cryptography",
    "google-cloud-storage",
]
