[project]
name = "app"
version = "0.1.0"
description = "AC215 project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "google-genai>=1.39.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-text-splitters",
    "openai>=1.95.1",
    "openai-agents>=0.3.2",
    "pandas>=2.3.3",
    "pypdf",
    "tqdm",
    "vertexai",
    "requests",
    "beautifulsoup4",
    "pdfplumber",
    "tqdm",
    "urllib3",
    "chardet",
    "typing_extensions",
    "charset-normalizer",
    "soupsieve",
    "pdfminer.six",
    "cryptography",
    "google-cloud-storage",
]
